[gd_scene load_steps=12 format=2]

[ext_resource path="res://data/misc/Environment.tres" type="Environment" id=1]
[ext_resource path="res://data/misc/bg_mat.tres" type="Material" id=2]
[ext_resource path="res://src/object_manager.gd" type="Script" id=3]
[ext_resource path="res://src/gui_manager.gd" type="Script" id=4]
[ext_resource path="res://data/texture/button_base.png" type="Texture" id=5]
[ext_resource path="res://data/texture/button_disabled.png" type="Texture" id=6]
[ext_resource path="res://data/texture/button_hover.png" type="Texture" id=7]
[ext_resource path="res://data/texture/button_pressed.png" type="Texture" id=8]
[ext_resource path="res://data/texture/button_updown.png" type="Texture" id=9]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 64, 16 )

[sub_resource type="CubeMesh" id=2]

[node name="Root" type="Spatial"]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4 )
current = true
fov = 90.0

[node name="Background" type="MeshInstance" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.19209e-07, -6 )
material_override = ExtResource( 2 )
mesh = SubResource( 1 )
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 0.0871558, 0.996195, 0, -0.996195, 0.0871558, 0, 0, 0 )

[node name="DisplayMesh" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null
script = ExtResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toolbar" type="Control" parent="GUI"]
anchor_bottom = 1.0
margin_right = 256.0
focus_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toolbar_Body" type="ColorRect" parent="GUI/Toolbar"]
anchor_bottom = 1.0
margin_left = -256.0
mouse_filter = 2
color = Color( 0.262745, 0.415686, 0.494118, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Toolbar/Toolbar_Body"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 64.0
margin_bottom = -64.0
mouse_filter = 2
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Control_0" type="Control" parent="GUI/Toolbar/Toolbar_Body/VBoxContainer"]
margin_right = 256.0
margin_bottom = 32.0
mouse_filter = 2

[node name="Label" type="Label" parent="GUI/Toolbar/Toolbar_Body/VBoxContainer/Button_Control_0"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_as_outline = 1
text = "Import Mesh"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImportMesh" type="TextureButton" parent="GUI/Toolbar/Toolbar_Body/VBoxContainer/Button_Control_0"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -8.0
margin_bottom = 8.0
mouse_filter = 1
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Control_1" type="Control" parent="GUI/Toolbar/Toolbar_Body/VBoxContainer"]
margin_top = 32.0
margin_right = 256.0
margin_bottom = 64.0
mouse_filter = 2

[node name="Label" type="Label" parent="GUI/Toolbar/Toolbar_Body/VBoxContainer/Button_Control_1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_as_outline = 1
text = "Mesh Scale"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScaleMesh" type="SpinBox" parent="GUI/Toolbar/Toolbar_Body/VBoxContainer/Button_Control_1"]
anchor_bottom = 1.0
margin_right = 74.0
mouse_filter = 1
custom_icons/updown = ExtResource( 9 )
step = 0.25
value = 1.0
allow_greater = true
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toolbar_Tween" type="Tween" parent="GUI/Toolbar"]

[node name="Model_Dialog" type="FileDialog" parent="GUI"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
margin_left = -157.5
margin_top = -65.0
margin_right = 157.5
margin_bottom = 65.0
window_title = "Open a 3D Model"
mode_overrides_title = false
mode = 0
filters = PoolStringArray( "*.obj ; 3D Model" )

[connection signal="mouse_entered" from="GUI/Toolbar" to="GUI" method="_on_Toolbar_mouse_entered"]
[connection signal="mouse_exited" from="GUI/Toolbar" to="GUI" method="_on_Toolbar_mouse_exited"]
[connection signal="button_up" from="GUI/Toolbar/Toolbar_Body/VBoxContainer/Button_Control_0/ImportMesh" to="GUI" method="_on_ImportMesh_button_up"]
[connection signal="value_changed" from="GUI/Toolbar/Toolbar_Body/VBoxContainer/Button_Control_1/ScaleMesh" to="GUI" method="_on_ScaleMesh_value_changed"]
[connection signal="file_selected" from="GUI/Model_Dialog" to="GUI" method="_on_Model_Dialog_file_selected"]
